--- a/Ex_0725/app/src/main/res/values/strings.xml
+++ b/Ex_0725/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Ex_0725</string>
+
+    <string name="alert_waring">Warning!!</string>
+    <string name="alert_error">Error!!</string>
+    <string name="alert_success">Success!!</string>
+
 </resources>
